--- a/assets/sass/components/buttons.scss
+++ b/assets/sass/components/buttons.scss
@@ -122,7 +122,7 @@
 			padding: .6rem;
 			position: relative;
 			text-align: center;
-			z-index: 100;
+			z-index: $z-button-text;
 			-webkit-touch-callout: none;
 			-webkit-user-select: none;
 			-khtml-user-select: none;
@@ -144,6 +144,7 @@
 
 			.c-button__morph-shape svg {
 				fill: $pri;
+				transition: fill $speed ease;
 			}
 
 			&:hover,
@@ -151,6 +152,15 @@
 				.c-button__morph-shape svg {
 					fill: $sec;
 				}
+			}
+		}
+
+		.c-button--secondary {
+			.c-button__morph-shape svg {
+				fill: none;
+				stroke: $pri;
+				stroke-width: $border-width * 2;
+				stroke-linecap: round;
 			}
 		}
 
