--- a/assets/sass/animations/base.scss
+++ b/assets/sass/animations/base.scss
@@ -14,3 +14,12 @@
     	transform: translateY( 0 );
   	}
 }
+
+@keyframes fade-in {
+	0% {
+    	opacity: 0;
+  	}
+  	100% {
+    	opacity: 1;
+  	}
+}
