--- a/assets/sass/components/dribbble-shots.scss
+++ b/assets/sass/components/dribbble-shots.scss
@@ -63,6 +63,10 @@
 		&:nth-child( 2 ) {
 			margin-top: 0;
 		}
+
+		&:last-child {
+			display: none;
+		}
 	}
 }
 
@@ -83,21 +87,20 @@
 	}
 }
 
-@include respond-min( $mq-animate ) {
-	.csstransitions {
-		.c-dribbble-shots__col {
-			opacity: 0;
-			transition: opacity $speed * 3 ease;
-		}
+// @include respond-min( $mq-animate ) {
+// 	.csstransitions {
+// 		.c-dribbble-shots__col {
+// 			opacity: 0;
+// 			transition: opacity $speed * 3 ease;
+// 		}
 
-		.is-inview {
-			.c-dribbble-shots__col {
-				opacity: 1;
-			}
-		}
-	}
-
-}
+// 		.is-inview {
+// 			.c-dribbble-shots__col {
+// 				opacity: 1;
+// 			}
+// 		}
+// 	}
+// }
 
 @include respond-min( $mq-x-large ) {
 	.c-dribbble-shots__row {
