--- a/assets/sass/components/hero/cover.scss
+++ b/assets/sass/components/hero/cover.scss
@@ -8,11 +8,18 @@
 .flexbox {
 	.c-hero--cover {
 		min-height: 100vh;
-		min-height: calc( 100vh - 7rem );
+		// min-height: calc( 100vh - 7rem );
 	}
 }
 
-@include respond-min( $mq-medium ) {
+@include respond-min( $mq-large ) {
+	//@todo vh unit
+	.flexbox {
+		.c-hero--cover {
+			// min-height: calc( 100vh - 8.8rem );
+		}
+	}
+
 	.flexbox {
 		.c-hero--cover {
 			align-items: center;
@@ -21,15 +28,6 @@
 
 		.c-hero__row {
 			flex-grow: 1;
-		}
-	}
-}
-
-@include respond-min( $mq-large ) {
-	//@todo vh unit
-	.flexbox {
-		.c-hero--cover {
-			min-height: calc( 100vh - 8.8rem );
 		}
 	}
 }
