--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -4,10 +4,6 @@
 
 =========================================================== */
 
-.c-nav {
-	background: $dark-1;
-}
-
 .c-nav__list {
 	list-style: none;
 }
@@ -18,47 +14,68 @@
 }
 
 .c-nav__link {
-	color: $white;
+	color: $dark-3;
 	transition: background $speed ease,
 				color $speed ease,
 				transform $speed ease;
 
 	.u-icon {
-		@include icon( rgba( $white, .75 ), 1.6rem, 1.6rem );
+		@include icon( rgba( $dark-3, .75 ), 1.6rem, 1.6rem );
 	}
 
-	&:hover,
-	&:focus {
-		.u-icon {
-			fill: $sec;
-		}
-	}
+	// &:hover,
+	// &:focus {
+	// 	color: $ter;
 
-	&.is-active {
-		color: $ter;
+	// 	.u-icon {
+	// 		fill: $ter;
+	// 	}
+	// }
 
-		.u-icon {
-			fill: $ter;
-		}
-	}
+	// &.is-active {
+	// 	color: $ter;
+
+	// 	.u-icon {
+	// 		fill: $ter;
+	// 	}
+	// }
 }
 
 .c-nav__link--button {
+	color: $white;
 	position: relative;
 
 	.u-icon {
 		fill: $white;
 	}
 
-	&:hover,
-	&:focus {
+	// &:hover,
+	// &:focus {
+	// 	.u-icon {
+	// 		fill: $white;
+	// 	}
+	// }
+
+	// &:active {
+	// 	transform: $active-scale-small;
+	// }
+}
+
+.c-header--colour {
+	.c-nav__link {
+		color: $dark-3;
+
 		.u-icon {
-			fill: $white;
+			fill: rgba( $dark-3, .75 );
 		}
 	}
 
-	&:active {
-		transform: $active-scale-small;
+	.c-nav__link--button {
+		color: $white;
+
+		.u-icon {
+			fill: $white;
+		}
 	}
 }
 
@@ -91,26 +108,28 @@
 
 	.enhance {
 		.c-nav {
-			animation-duration: $speed * 1.5;
+			animation-duration: $speed * 2;
 			animation-fill-mode: both;
-			// background: $background-colour; @todo add when toggle nav
+			background: $light-1;
 			display: block;
 			left: 0;
-			// padding-bottom: $padding-small / 4;
-			padding-top: $padding-small / 2;
+			padding-top: 9rem;
 			position: absolute;
 			top: 0;
 			transform: translateY( -100% );
-			transition: transform $speed ease;
 			width: 100%;
 			z-index: -1;
+		}
 
-			&.is-visible {
-				animation-name: navBounceInDown;
+		&.c-nav-is-visible {
+			.c-nav {
+				animation-name: nav-bounce-in-down;
 			}
+		}
 
-			&.is-hidden {
-				animation-name: navBounceOutUp;
+		&.c-nav-is-hidden {
+			.c-nav {
+				animation-name: nav-bounce-out-up;
 			}
 		}
 	}
@@ -139,13 +158,53 @@
 	}
 
 	.c-nav__link {
+		color: $white;
 		display: block;
 		padding: .9rem 2rem;
+
+		.u-icon {
+			fill: rgba( $white, .75 );
+		}
 	}
 
 	.c-nav__link--button {
 		border-radius: $border-radius * 10;
+		color: $text-colour;
 		margin-bottom: -.6rem;
 		margin-top: -.6rem;
+
+		.u-icon {
+			fill: $text-colour;
+		}
+	}
+
+	.svg {
+		.c-nav__link--button {
+			margin-right: -.7rem;
+
+			.c-button__morph-shape svg {
+				fill: $white;
+			}
+
+			&:hover {
+				.c-button__morph-shape  svg {
+					fill: $white;
+				}
+			}
+		}
+
+		.c-header--colour {
+			.c-nav__link--button {
+				.c-button__morph-shape svg {
+					fill: $pri;
+				}
+
+				&:hover {
+					.c-button__morph-shape  svg {
+						fill: $sec;
+					}
+				}
+			}
+		}
 	}
 }
