--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="c-header" role="banner">
+<header class="c-header {{ page.headerClass }}" role="banner" data-module="Header" data-header-white="{{ page.headerData }}">
 	<div class="c-header__inner">
 		<a href="{{ site.baseurl }}/" class="c-header__logo">
 			<svg class="u-icon u-icon--logo">
@@ -6,16 +6,18 @@
             </svg>
 		</a>
 
-		<button class="c-header__toggle-menu-button" id="toggle-menu" aria-haspopup="true" data-module="Toggle" data-toggle="js-nav">
-			<svg class="u-icon u-icon--menu">
-                <use xlink:href="#icon--menu"></use>
-            </svg>
+		<button class="c-header__toggle-menu-button" id="toggle-menu" aria-haspopup="true" data-module="Toggle" data-toggle="c-nav">
+	    	<div class="u-icon--menu">
+	        	<span class="u-icon--menu__top"></span>
+	        	<span class="u-icon--menu__middle"></span>
+	        	<span class="u-icon--menu__bottom"></span>
+	      	</div>
 		</button>
 
-		<nav class="c-nav js-nav" aria-labelledby="toggle-menu" role="navigation">
+		<nav class="c-nav" aria-labelledby="toggle-menu" role="navigation">
 			<div class="c-nav__list">
 				<div class="c-nav__item">
-					<a href="/work" class="c-nav__link">
+					<a href="{{ "/work" | prepend: site.baseurl }}" class="c-nav__link">
 						work
 						<svg class="u-icon u-icon--briefcase">
                             <use xlink:href="#icon--briefcase"></use>
@@ -23,7 +25,7 @@
 					</a>
 				</div>
 				<div class="c-nav__item">
-					<a href="/about" class="c-nav__link">
+					<a href="{{ "/about" | prepend: site.baseurl }}" class="c-nav__link">
 						about
 						<svg class="u-icon u-icon--heart">
                             <use xlink:href="#icon--heart"></use>
@@ -32,7 +34,7 @@
 				</div>
 				<div class="c-nav__item--align-right">
 					<div class="c-nav__item">
-						<a href="/blog" class="c-nav__link">
+						<a href="{{ "/blog" | prepend: site.baseurl }}" class="c-nav__link">
 							blog
 							<svg class="u-icon u-icon--chat">
 	                            <use xlink:href="#icon--chat"></use>
@@ -40,7 +42,7 @@
 						</a>
 					</div>
 					<div class="c-nav__item">
-						<a href="/planner" class="c-nav__link c-nav__link--button c-button--primary" data-module="SvgButton">
+						<a href="{{ "/planner" | prepend: site.baseurl }}" class="c-nav__link c-nav__link--button c-button--primary" data-module="SvgButton">
 							<span class="c-button__morph-shape" data-morph-active="M282.5,62.5c0,27.891-17.583,50.176-46.5,53.5c-21.75,2.5-64.355,4-86,4c-21.645,0-65-1-86-4c-29.408-4.201-46.5-25.609-46.5-53.5l0,0C17.5,34.609,36.594,13.177,64,8c22.5-4.25,64.355-4,86-4c21.645,0,64.669,1.31,86,4C263.75,11.5,282.5,34.609,282.5,62.5L282.5,62.5z">
 								<svg width="100%" height="100%" viewBox="0 0 300 125" preserveAspectRatio="none">
 									<path d="M286.5,62.5c0,27.891-22.609,50.5-50.5,50.5c-21.5,0-64.355,0-86,0c-21.645,0-64.5,0-86,0c-27.891,0-50.5-22.609-50.5-50.5l0,0C13.5,34.609,36.109,12,64,12c21.5,0,64.355,0,86,0c21.645,0,64.5,0,86,0C263.891,12,286.5,34.609,286.5,62.5L286.5,62.5z"/>
