--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -29,8 +29,8 @@ layout: master
 		</header>
 	</div>
 
-	<div class="o-wrap o-wrap--medium s-free-content" itemprop="articleBody">
-		<p class="intro">{{ page.exerpt }}</p>
+	<div class="o-wrap o-wrap--small s-free-content" itemprop="articleBody">
+		<p class="u-intro">{{ page.exerpt }}</p>
 
 		{{ content }}
 	</div>
